# Bitirme

./: .gitignore  AGENT.md  Instructions.md  PROJECT.md  PROMPT_ENGINEERING_IMPROVEMENT.md  README.md  StreamGuard_Config.md  build_TUI.py  llm_config.json  llm_config.py  main.py  pyproject.toml  requirements.txt  run_TUI.py  test_turkish_dict_extended.py
Agents/Nodes/: NODES_WORKFLOW_GUIDE.md
Agents/TestAgent/: test_tool_caller.py
Agents/Tools/: NecessaryTools.md  crawl_page.py  crawl_urls.py  discover_dirs.py  duckduckgo_search.py  generic_http_search.py  get_datetime.py  read_file.py  read_input_file.py  util_tools.py  write_markdown.py
TUI/: tui_app.py
UI/TUI/: tui_app.py
backend/: backend.pyproj
databases/: databases.pyproj
frontend/: frontend.pyproj
scripts/: build_TUI.py  check_ollama_models.py  install_models.py  install_spacy_models.ps1
services/Agents/: agent.md
services/Config/: config.json  config.py
services/Tests/: conftest.py  test_detect_language.py  test_lemmatize_english.py  test_lemmatize_text.py  test_lemmatize_turkish.py  test_loopCatcher.py  test_normalize_output.py  test_segment_by_language.py
support_lib/: load_llm.py
support_lib/CTT/: __init__.py  ctt_types.py  tree_utilities.py
support_lib/Lemmatizer/: detect_language.py  lemmatize_english.py  lemmatize_text.py  lemmatize_turkish.py  normalize_output.py  (+2 more)
tests/: COMPLEX_INPUT_TEST_SUMMARY.md  COMPLEX_TEST_CASE.py  test_complex_input.py  test_config_errors.py  test_config_loading.py  test_expression_tree_ctt.py  test_lemmatizer_chain.py  test_normalization.py  test_taskmaster_debug.py  test_taskmaster_strict_parse.py  test_tui_exe.py
(+89 files in other folders)
