[project]
name = "designproject"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain>=1.2.18",
    "langchain-core>=1.3.3",
    "langchain-ollama>=1.1.0",
    "langdetect>=1.0.9",
    "langgraph>=1.1.10",
    "nltk>=3.9.4",
    "pydantic>=2.13.4",
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
    "requests>=2.33.1",
    "ruff>=0.15.12",
    "spacy>=3.8.14",
    "stanza>=1.11.1",
    "textual>=8.2.5",
    "torch>=2.11.0",
    "typing-extensions>=4.15.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]
