[project]
name = "services"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=1.3.0",
    "langchain-core>=1.4.0",
    "langdetect>=1.0.9",
    "langgraph>=1.2.0",
    "nltk>=3.9.4",
    "pydantic>=2.13.4",
    "pydantic-ai>=1.95.1",
    "pytest>=9.0.3",
    "requests>=2.34.1",
    "spacy>=3.8.14",
    "stanza>=1.12.0",
    "typing-extensions>=4.15.0",
]

[tool.pytest.ini_options]
testpaths = ["services/Tests"]
python_files = ["test_*.py"]
python_classes = []
python_functions = ["test_"]
addopts = "--tb=short"
